@@ -1,5 +1,17 @@
 2018-10-19  Zalan Bujtas  <zalan@apple.com>
 
+        [LFC][IFC] Add inline runs to showLayoutTree
+        https://bugs.webkit.org/show_bug.cgi?id=190718
+
+        Reviewed by Antti Koivisto.
+
+        * layout/layouttree/LayoutTreeBuilder.cpp:
+        (WebCore::Layout::outputInlineRuns):
+        (WebCore::Layout::outputLayoutBox):
+        (WebCore::Layout::outputLayoutTree):
+
+2018-10-19  Zalan Bujtas  <zalan@apple.com>
+
         [LFC][IFC] Remove the previous version of inline content handling.
         https://bugs.webkit.org/show_bug.cgi?id=190716
 
